LZ-Kernel-Manager.desktop:Found error in catergories definition. Repackaged release to reflect changes.

--- a/usr/share/applications/LZ-Kernel-Manager.desktop
+++ b/usr/share/applications/LZ-Kernel-Manager.desktop
@@ -10,5 +10,5 @@ Exec=lzkm
 Terminal=true
 StartupNotify=false
 Type=Application
-Categories=Programming;
+Categories=GTK;Development;IDE;Programming;
 Name[en_US]=LZ-Kernel-Manager
